fix: search service
